# sqlmodel-fun

./: Makefile  pyproject.toml
db/: database.db
sqlmodel_fun/: database.db  main.py  relation.py
